k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docx-to-pdf-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: docpdf.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: docx-to-pdf-app-service
            port:
              number: 80
